# kafka-ride-service

./: .gitignore  Makefile  README.md  consumer.py  docker-compose.override.yml  docker-compose.yml  kafka-deployment.yaml  kafka-values.yaml  kafka-zk.yaml  kubernetes.yml  namespace.yml  producer.py  pyproject.toml
.github/workflows/: trivy.yaml
assets/: architecture_diagram.py  k8s-lan-exposure-guide.md
consumers/: Dockerfile  base_consumer.py  consumer.py  consumer_location_update.py  consumer_ride_completed.py  consumer_ride_requested.py  consumer_ride_started.py  requirements.txt  run_all_consumers.py
consumers/modules/: constants.py  dlq_producer.py  helpers.py
docs/: minikube-windows-lan-access.md  network-exposure-minikube.md
k8s-manifests/: k8s-consumers.yaml  k8s-kafka-zookeeper.yaml  k8s-namespace.yaml  k8s-postgres.yaml  k8s-producer.yaml
k8s-manifests/kafka-consumers-chart/: Chart.yaml  values.yaml
k8s-manifests/monitoring/: grafana-values.yaml
k8s-manifests/network-policies/: allow-consumers-to-kafka.yaml  allow-consumers-to-postgres.yaml  allow-kafka-to-zookeeper.yaml  allow-kafka-ui-to-kafka.yaml  allow-kafka-ui-to-schema-registry.yaml  allow-monitoring-to-kafka.yaml  allow-producer-to-kafka.yaml  allow-producer-to-potsgres.yaml  allow-schema-registry-to-kafka.yaml  deny-all-ingress.yaml
producer/: Dockerfile  main.py  producer.py  requirements.txt
producer/avro_schemas/: location_update.avsc  ride_completed.avsc  ride_requested.avsc
schemas/: dead_letter_event.avsc  ride_started.avsc
topics/: create-topics.sh
(+21 files in other folders)
